# NumMethods

./: .gitignore
_/: OMP_Main.cpp  cilk_Main.cpp  serial_Main.cpp
_/tbb/: CalcError.h  Main.cpp  Makefile  WawePropagation.h  stdafx.h
by_make_and_cmake/: CMakeLists.txt  build.sh
by_make_and_cmake/include/: util.h
by_make_and_cmake/src/: main.cpp  mmio.cpp
by_make_simple/: Makefile  main.cpp  util.cpp  util.h
cilk/: CMakeLists.txt
cilk/include/: timer.h  util.h
cilk/src/: main.cpp  mmio.cpp  util.cpp
code/: 01_Sequence.icproj  01_Sequence.vcproj  01_Sequence.vcxproj  01_Sequence.vcxproj.filters  main.cpp  output  sparse.cpp  sparse.h  time  util.cpp  util.h
experiments/: experiments_s_first  experiments_s_no_sort  openmp_experiments_no_paral  openmp_parallel  serial_experiments
openmp/: CMakeLists.txt  Makefile  test.sh
openmp/include/: util.h
openmp/src/: main.cpp  mmio.cpp  util.cpp
serial/: Makefile  build.sh  test.sh
serial/include/: mmio.h  util.h
serial/src/: main.cpp  util.cpp
tbb/: CMakeLists.txt  test.sh
tbb/include/: util.h
tbb/src/: main.cpp  mmio.cpp  util.cpp
test_data/: input10  input8  output10
